; ModuleID = '/home/carl/AnghaBench/systemd/src/nspawn/extr_test-nspawn-tables.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/nspawn/extr_test-nspawn-tables.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@resolv_conf_mode = common dso_local global i32 0, align 4
@RESOLV_CONF_MODE = common dso_local global i32 0, align 4
@timezone_mode = common dso_local global i32 0, align 4
@TIMEZONE_MODE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @resolv_conf_mode, align 4
  %7 = load i32, i32* @RESOLV_CONF_MODE, align 4
  %8 = call i32 @test_table(i32 %6, i32 %7)
  %9 = load i32, i32* @timezone_mode, align 4
  %10 = load i32, i32* @TIMEZONE_MODE, align 4
  %11 = call i32 @test_table(i32 %9, i32 %10)
  ret i32 0
}

declare dso_local i32 @test_table(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
